@@ -1,7 +1,7 @@
 # Configuration for Perl tests.  -*- perl -*-
 
-# We don't have very good tests yet.
-$COVERAGE_LEVEL = 70;
+# More than this requires testing obscure encoding nonsense.
+$COVERAGE_LEVEL = 90;
 
 # Minimum Perl version requirement.
 $MINIMUM_VERSION = '5.024';
